crates/bevy_ecs_compile_fail_tests/tests/ui/world_query_derive.stderr
error[E0277]: the trait bound `&'static mut Foo: ReadOnlyWorldQueryData` is not satisfied
 --> tests/ui/world_query_derive.rs:8:8
  |
8 |     a: &'static mut Foo,
  |        ^^^^^^^^^^^^^^^^ the trait `ReadOnlyWorldQueryData` is not implemented for `&'static mut Foo`
  |
  = help: the following other types implement trait `ReadOnlyWorldQueryData`:
            &T
            ()
            (F0, F1)
            (F0, F1, F2)
            (F0, F1, F2, F3)
            (F0, F1, F2, F3, F4)
            (F0, F1, F2, F3, F4, F5)
            (F0, F1, F2, F3, F4, F5, F6)
          and $N others
note: required by a bound in `_::assert_readonly`
 --> tests/ui/world_query_derive.rs:6:10
  |
6 | #[derive(WorldQueryData)]
  |          ^^^^^^^^^^^^^^ required by this bound in `assert_readonly`
  = note: this error originates in the derive macro `WorldQueryData` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MutableMarked: ReadOnlyWorldQueryData` is not satisfied
  --> tests/ui/world_query_derive.rs:19:8
   |
19 |     a: MutableMarked,
   |        ^^^^^^^^^^^^^ the trait `ReadOnlyWorldQueryData` is not implemented for `MutableMarked`
   |
   = help: the following other types implement trait `ReadOnlyWorldQueryData`:
             &T
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and $N others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:17:10
   |
17 | #[derive(WorldQueryData)]
   |          ^^^^^^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `WorldQueryData` (in Nightly builds, run with -Z macro-backtrace for more info)
